Converted java 8 incompatible syntax and methods