@@ -1,5 +1,6 @@
 package benchmark.prefix;
 
+import org.hzt.utils.collectors.CollectorsX;
 import org.hzt.utils.numbers.IntX;
 import org.hzt.utils.streams.StreamX;
 import org.openjdk.jmh.annotations.Benchmark;
@@ -12,8 +13,8 @@ import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @SuppressWarnings("unused")
@@ -26,7 +27,7 @@ public class PrefixStreamXMapFilterToListBenchmark {
 
     private final List<String> list = IntStream.range(0, Integer.parseInt(NR_OF_ITERATIONS))
             .mapToObj(String::valueOf)
-            .collect(Collectors.toUnmodifiableList());
+            .collect(CollectorsX.toUnmodifiableList());
 
     public PrefixStreamXMapFilterToListBenchmark() {
         super();
@@ -37,7 +38,7 @@ public class PrefixStreamXMapFilterToListBenchmark {
         return list.stream()
                 .map(String::length)
                 .filter(IntX::isEven)
-                .collect(Collectors.toUnmodifiableList());
+                .collect(CollectorsX.toUnmodifiableList());
     }
 
     @Benchmark
@@ -45,7 +46,7 @@ public class PrefixStreamXMapFilterToListBenchmark {
         return list.parallelStream()
                 .map(String::length)
                 .filter(IntX::isEven)
-                .collect(Collectors.toUnmodifiableList());
+                .collect(CollectorsX.toUnmodifiableList());
     }
 
     @Benchmark
@@ -73,7 +74,7 @@ public class PrefixStreamXMapFilterToListBenchmark {
                 result.add(length);
             }
         }
-        return List.copyOf(result);
+        return Collections.unmodifiableList(result);
     }
 
     public static void main(String[] args) {
