@@ -2,6 +2,7 @@ package org.hzt.utils.iterables;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -10,9 +11,9 @@ class IterableReductionsTest {
 
     @Test
     void testAny() {
-        final var strings = List.of("This", "is", "a", "test");
+        final List<String> strings = Arrays.asList("This", "is", "a", "test");
 
-        final var anyContainsS = IterableReductions.any(strings, s -> s.contains("s"));
+        final boolean anyContainsS = IterableReductions.any(strings, s -> s.contains("s"));
 
         assertTrue(anyContainsS);
     }
