@@ -1,9 +1,10 @@
 package org.hzt.utils.streams;
 
+import org.hzt.utils.iterators.functional_iterator.AtomicIterator;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -12,9 +13,9 @@ class SpliterableTest {
 
     @Test
     void testAtomicIteratorFromSpliterable() {
-        final var spliterable = StreamX.of(List.of(1, 2, 3, 4, 5, 6, 7, 8));
+        final StreamX<Integer> spliterable = StreamX.of(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8));
 
-        final var atomicIterator = spliterable.atomicIterator();
+        final AtomicIterator<Integer> atomicIterator = spliterable.atomicIterator();
 
         Set<Integer> set = new HashSet<>();
 
